--- a/USTD_Dev_all/templates/index.html
+++ b/USTD_Dev_all/templates/index.html
@@ -398,8 +398,8 @@
                                             </i>
                                         </div>
                                         <div class="col-10 text-right">
-                                            <h5 class="mt-0 mb-1">{{ score.zy }}分</h5>
-                                            <p class="mb-0 font-12 text-muted">专业技术能力</p>
+                                            <h5 class="mt-0 mb-1">{{ score.zh }}分</h5>
+                                            <p class="mb-0 font-12 text-muted"> 综合发展能力</p>
                                         </div>
                                     </div>
                                 </div>
@@ -413,33 +413,41 @@
             <div class="col-lg-9">
                 <div class="card">
                     <div class="card-body">
-                        <div class="btn-group btn-group-toggle float-right" data-toggle="buttons">
-                            <label class="btn btn-primary btn-sm active">
-                                <input type="radio" name="options" id="option1" checked="">用户（左）
-                            </label>
-                            <label class="btn btn-primary btn-sm">
-                                <input type="radio" name="options" id="option2">平均（右）
-                            </label>
-                        </div>
-                        <h5 class="header-title mb-4 mt-0">成绩雷达图对比
-                        </h5>
-                        <div>
+                        <h5 class="header-title mb-4 mt-0">成绩雷达图对比</h5>
                             <img height="100%" width="100%" src="/static/image/1.png"/>
-                        </div>
+
                     </div>
                 </div>
             </div>
+
             <div class="col-lg-3">
+            <div class="card ">
+                            <div class="card-body" >
+                                <div class="icon-contain">
+                                    <div class="row">
+                                        <div class="col-2 align-self-center">
+                                            <i class="fas fa-database text-gradient-primary">
+                                            </i>
+                                        </div>
+                                        <div class="col-10 text-right" >
+                                            <h1 style="color:red"  class="mt-0 mb-1" >{{ overallgrade }}分</h1>
+                                            <p style="color:blue" class="mb-0 font-32 text-muted" >综合素质测评总分</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                 <div class="card">
                     <div class="card-body">
                         <div class="dropdown d-inline-block float-right">
                             <a class="nav-link dropdown-toggle arrow-none" id="dLabel4" data-toggle="dropdown" href="#"
                                role="button" aria-haspopup="false" aria-expanded="false">
-
                             </a>
                         </div>
                         <!--                        <h5 class="header-title mb-4 mt-0">综合发展能力</h5>-->
+
                         <div>
+
                             <h6 class="header-title mb-4 mt-0">近期活动展示</h6></br>
                             <a href="https://www.hunnu.edu.cn/">湖南师范大学官网</a></br></br>
                             <a href="https://jwc.hunnu.edu.cn/">湖南师范大学教务处</a></br></br>
