修改view各功能对数据表的调用

--- a/USTD_Dev_all/templates/index.html
+++ b/USTD_Dev_all/templates/index.html
@@ -326,7 +326,7 @@
                                             </i>
                                         </div>
                                         <div class="col-10 text-right">
-                                            <h5 class="mt-0 mb-1">{{ score.zy }}分</h5>
+                                            <h5 class="mt-0 mb-1">{{ s1 }}分</h5>
                                             <p class="mb-0 font-12 text-muted">专业技术能力</p>
                                         </div>
                                     </div>
@@ -345,7 +345,7 @@
                                             </i>
                                         </div>
                                         <div class="col-10 text-right">
-                                            <h5 class="mt-0 mb-1">{{ score.cx }}分</h5>
+                                            <h5 class="mt-0 mb-1">{{ s2 }}分</h5>
                                             <p class="mb-0 font-12 text-muted">创新创业能力</p>
                                         </div>
                                     </div>
@@ -364,7 +364,7 @@
                                             </i>
                                         </div>
                                         <div class="col-10 text-right">
-                                            <h5 class="mt-0 mb-1">{{ score.zs }}分</h5>
+                                            <h5 class="mt-0 mb-1">{{ s3 }}分</h5>
                                             <p class="mb-0 font-12 text-muted">知识学习能力</p>
                                         </div>
                                     </div>
@@ -383,7 +383,7 @@
                                             </i>
                                         </div>
                                         <div class="col-10 text-right">
-                                            <h5 class="mt-0 mb-1">{{ score.gl }}分</h5>
+                                            <h5 class="mt-0 mb-1">{{ s4 }}分</h5>
                                             <p class="mb-0 font-12 text-muted">管理实践能力</p>
                                         </div>
                                     </div>
@@ -402,7 +402,7 @@
                                             </i>
                                         </div>
                                         <div class="col-10 text-right">
-                                            <h5 class="mt-0 mb-1">{{ score.zy }}分</h5>
+                                            <h5 class="mt-0 mb-1">{{ s5 }}分</h5>
                                             <p class="mb-0 font-12 text-muted">专业技术能力</p>
                                         </div>
                                     </div>
