--- a/USTD_Dev_all/templates/tables-editable.html
+++ b/USTD_Dev_all/templates/tables-editable.html
@@ -1,4 +1,3 @@
-{% load notifications_tags %}
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
@@ -54,57 +53,57 @@
                         <div class="dropdown-menu dropdown-menu-right dropdown-arrow dropdown-menu-lg border-0">
                             <!-- item-->
                             <div class="dropdown-item noti-title">
-                                <h5><span class="badge badge-danger float-right">5</span>Messages</h5>
-                            </div>
-                            <!-- item-->
-                            <a href="javascript:void(0);" class="dropdown-item notify-item">
-                                <div class="notify-icon">
-                                    <img src="../static/picture/avatar-2.jpg" alt="user-img"
-                                         class="img-fluid rounded-circle">
-                                </div>
-                                <p class="notify-details">
-                                    <b>Charles M. Jones</b>
-                                    <small class="text-muted">Dummy text of the printing and typesetting
-                                        industry.</small>
-                                </p>
-                            </a>
-                            {#                            <!-- item--><a href="javascript:void(0);" class="dropdown-item notify-item">#}
-                            {#                            <div class="notify-icon"><img src="../static/picture/avatar-3.jpg" alt="user-img"#}
-                            {#                                                          class="img-fluid rounded-circle"></div>#}
-                            {#                            <p class="notify-details"><b>Thomas J. Mimms</b><small class="text-muted">You#}
-                            {#                                have 87 unread messages</small></p>#}
-                            {#                        </a><!-- item--><a href="javascript:void(0);" class="dropdown-item notify-item">#}
-                            {#                            <div class="notify-icon"><img src="../static/picture/avatar-4.jpg" alt="user-img"#}
-                            {#                                                          class="img-fluid rounded-circle"></div>#}
-                            {#                            <p class="notify-details"><b>Luis M. Konrad</b><small class="text-muted">It is a#}
-                            {#                                long established fact that a reader will</small></p>#}
-                            {#                            </a>#}
-                            <!-- All-->
-                            <a href="javascript:void(0);" class="dropdown-item notify-item border-top">
-                                View All
-                            </a>
+                                <h5><span class="badge badge-danger float-right">745</span>Messages</h5>
+                            </div><!-- item--><a href="javascript:void(0);" class="dropdown-item notify-item">
+                            <div class="notify-icon"><img src="/static/picture/avatar-2.jpg" alt="user-img"
+                                                          class="img-fluid rounded-circle"></div>
+                            <p class="notify-details"><b>Charles M. Jones</b><small class="text-muted">Dummy
+                                text of the printing and typesetting industry.</small></p>
+                        </a><!-- item--><a href="javascript:void(0);" class="dropdown-item notify-item">
+                            <div class="notify-icon"><img src="/static/picture/avatar-3.jpg" alt="user-img"
+                                                          class="img-fluid rounded-circle"></div>
+                            <p class="notify-details"><b>Thomas J. Mimms</b><small class="text-muted">You
+                                have 87 unread messages</small></p>
+                        </a><!-- item--><a href="javascript:void(0);" class="dropdown-item notify-item">
+                            <div class="notify-icon"><img src="/static/picture/avatar-4.jpg" alt="user-img"
+                                                          class="img-fluid rounded-circle"></div>
+                            <p class="notify-details"><b>Luis M. Konrad</b><small class="text-muted">It is a
+                                long established fact that a reader will</small></p>
+                        </a><!-- All--><a href="javascript:void(0);"
+                                          class="dropdown-item notify-item border-top">View All </a>
                         </div>
                     </li><!-- notification-->
                     <li class="list-inline-item dropdown notification-list"><a
                             class="nav-link dropdown-toggle arrow-none waves-effect" data-toggle="dropdown"
                             href="#" role="button" aria-haspopup="false" aria-expanded="false"><i
                             class="dripicons-bell noti-icon"></i><span
-                            class="badge badge-success noti-icon-badge">{% notifications_unread %}</span></a>
+                            class="badge badge-success noti-icon-badge">2</span></a>
                         <div class="dropdown-menu dropdown-menu-right dropdown-arrow dropdown-menu-lg border-0">
                             <!-- item-->
                             <div class="dropdown-item noti-title">
-                                <h5>Notification</h5>
-                            </div><!-- item--><a href="{% url 'my_notifications' %}" class="dropdown-item notify-item">
+                                <h5>Notification(3)</h5>
+                            </div><!-- item--><a href="javascript:void(0);" class="dropdown-item notify-item">
                             <div class="notify-icon bg-success"><i class="mdi mdi-cart-outline"></i></div>
-                            我的消息<span class="badge unread-count">{% notifications_unread %}</span>
-                            <br><small class="text-muted">My Messages</small>
-                        </a>
+                            <p class="notify-details"><b>Your order is placed</b><small
+                                    class="text-muted">Dummy text of the printing and typesetting
+                                industry.</small></p>
+                        </a><!-- item--><a href="javascript:void(0);" class="dropdown-item notify-item">
+                            <div class="notify-icon bg-warning"><i class="mdi mdi-message"></i></div>
+                            <p class="notify-details"><b>New Message received</b><small
+                                    class="text-muted">You have 87 unread messages</small></p>
+                        </a><!-- item--><a href="javascript:void(0);" class="dropdown-item notify-item">
+                            <div class="notify-icon bg-info"><i class="mdi mdi-glass-cocktail"></i></div>
+                            <p class="notify-details"><b>Your class is updated</b><small
+                                    class="text-muted">It is a long established fact that a reader
+                                will</small></p>
+                        </a><!-- All--><a href="javascript:void(0);" class="dropdown-item notify-item border-top">View
+                            All </a>
                         </div>
                     </li><!-- User-->
                     <li class="dropdown notification-list">
                         <a class="nav-link dropdown-toggle arrow-none waves-effect nav-user" data-toggle="dropdown"
                            href="#" role="button" aria-haspopup="false" aria-expanded="false">
-                            <img src="../static/picture/avatar-1.jpg" alt="user" class="rounded-circle">
+                            <img src="/static/picture/avatar-1.jpg" alt="user" class="rounded-circle">
                         </a>
                         <span>{{ name }}</span>
                         <div class="dropdown-menu dropdown-menu-right profile-dropdown  border-0">
@@ -130,21 +129,16 @@
                             </a>
                         </div>
                     </li>
-                    <li class="menu-item">
-                        <!-- Mobile menu toggle-->
-                        <a class="navbar-toggle nav-link">
-                            <div class="lines">
-                                <span></span>
-                                <span></span>
-                                <span></span>
-                            </div>
-                        </a>
-                        <!-- End mobile menu toggle-->
+                    <li class="menu-item list-inline-item">
+                        <!-- Mobile menu toggle--><a class="navbar-toggle nav-link">
+                        <div class="lines"><span></span><span></span><span></span></div>
+                    </a><!-- End mobile menu toggle-->
                     </li>
                 </ul>
-            </div>
+            </div><!-- end menu-extras -->
             <!-- end menu-extras -->
             <div class="clearfix">
+
             </div>
         </div>
         <!-- end container -->
@@ -158,14 +152,14 @@
                 <ul class="navigation-menu">
                     <li class="has-submenu">
                         <a href="http://127.0.0.1:8000/login/index.html">
-                            <i class="dripicons-device-desktop">
+                            <i class="dripicons-jewel">
                             </i>主页
                         </a>
                     </li>
 
                     <li class="has-submenu">
                         <a href="#">
-                            <i class="dripicons-jewel">
+                            <i class="dripicons-device-desktop">
 
                             </i>提交材料
                         </a>
@@ -216,7 +210,6 @@
                                     <li>
                                         <a href="suggestion/4/">管理实践推荐</a>
                                     </li>
-
                                 </ul>
                             </li>
                         </ul>
@@ -246,6 +239,8 @@
                         </ul>
                     </li>
                 </ul>
+                </li>
+
                 <!-- End navigation menu -->
             </div>
             <!-- end #navigation -->
@@ -317,8 +312,89 @@
                                         <td><font color="#CEBE29">待审核</font></td>
                                     {% endif %}
                                     <td>
-                                        <a href="/shenhe_delete.html?id={{ item.id }}">删除</a>
+                                        <a href="/shenhe_delete.html?id={{ item.id }}" id="a1">撤回</a>
                                     </td>
+                                </tr>
+                            {% endfor %}
+                            </tbody>
+
+                        </table>
+                        <HR style="FILTER:alpha(opacity=100,finishopacity=0,style=2)" width="80%" color=#987cb9 SIZE=10>
+                        <br>
+                        <br>
+                        <h3 class="mt-0 header-title" align="center">不予通过材料</h3>
+                        <br>
+                        <table class="table mb-0" rules=all frame="all">
+                            <thead>
+                            <tr>
+                                <th width="5%">学号</th>
+                                <th width="30%" align="center">证明材料描述</th>
+                                <th width="10%">所属类别</th>
+                                <th width="5%">加分项</th>
+                                <th width="20%">证明材料图片</th>
+                                <th width="10%">审核状态</th>
+
+
+                            </tr>
+                            </thead>
+                            <tbody>
+                            {% for item in shenhe_list_F %}
+                                <tr>
+                                    <td>{{ item.no }}</td>
+                                    <td>{{ item.miaoshu }}</td>
+                                    <td>{{ item.leibie }}</td>
+                                    <td>{{ item.extra_points }}</td>
+                                    <td><img height="100px" width="100px" src="{{ MEDIA_URL }}{{ item.image }}"></td>
+                                    {% if item.zhuangtai == "T" %}
+                                        <td><font color="green">通过</font></td>
+                                    {% endif %}
+                                    {% if item.zhuangtai == "F" %}
+                                        <td><font color="red">未通过</font></td>
+                                    {% endif %}
+                                    {% if item.zhuangtai == "D" %}
+                                        <td><font color="#CEBE29">待审核</font></td>
+                                    {% endif %}
+
+                                </tr>
+                            {% endfor %}
+                            </tbody>
+                        </table>
+                        <HR style="FILTER:alpha(opacity=100,finishopacity=0,style=2)" width="80%" color=#987cb9 SIZE=10>
+                        <br>
+                        <br>
+                        <h4 class="mt-0 header-title" align="center">审核通过材料</h4>
+                        <br>
+                        <table class="table mb-0" rules=all frame="all">
+                            <thead>
+                            <tr>
+                                <th width="5%">学号</th>
+                                <th width="30%" align="center">证明材料描述</th>
+                                <th width="10%">所属类别</th>
+                                <th width="5%">加分项</th>
+                                <th width="20%">证明材料图片</th>
+                                <th width="10%">审核状态</th>
+
+
+                            </tr>
+                            </thead>
+                            <tbody>
+                            {% for item in shenhe_list_T %}
+                                <tr>
+                                    <td>{{ item.no }}</td>
+                                    <td>{{ item.miaoshu }}</td>
+                                    <td>{{ item.leibie }}</td>
+                                    <td>{{ item.extra_points }}</td>
+                                    <td><img height="100px" width="100px" src="{{ MEDIA_URL }}{{ item.image }}"></td>
+                                    {% if item.zhuangtai == "T" %}
+                                        <td><font color="green">通过</font></td>
+                                    {% endif %}
+                                    {% if item.zhuangtai == "F" %}
+                                        <td><font color="red">未通过</font></td>
+                                    {% endif %}
+                                    {% if item.zhuangtai == "D" %}
+                                        <td><font color="#CEBE29">待审核</font></td>
+                                    {% endif %}
+
                                 </tr>
                             {% endfor %}
                             </tbody>
@@ -364,9 +440,10 @@
 
                                             <tr>
                                                 <td class="td_left"><label for="password">材料描述</label></td>
-                                                <td class="td_right"><input type="text" name="miaoshu" id="password">
-                                                </td>
+                                                <td class="td_right"><textarea cols="8" rows="20" name="miaoshu"
+                                                                               id="password"></textarea></td>
                                             </tr>
+
 
                                             <tr>
                                                 <td class="td_left"><label for="email">类别</label></td>
@@ -418,28 +495,28 @@
 <footer class="footer">
     <div class="container-fluid">
         <div class="row">
-            <div class="col-12">© 2022 大学生发展综合素质测评系统
+            <div class="col-12">© 2022 大学生发展综合素质测评系统</a>
             </div>
         </div>
     </div>
 </footer>
 <!-- End Footer --><!-- jQuery -->
 
-<script src="../static/js/jquery.min.js"></script>
-<script src="../static/js/popper.min.js"></script>
-<script src="../static/js/bootstrap.min.js"></script>
-<script src="../static/js/modernizr.min.js"></script>
-<script src="../static/js/waves.js"></script>
-<script src="../static/js/jquery.slimscroll.js"></script>
-<script src="../static/js/jquery.nicescroll.js"></script>
-<script src="../static/js/jquery.scrollTo.min.js"></script>
+<script src="/static/js/jquery.min.js"></script>
+<script src="/static/js/popper.min.js"></script>
+<script src="/static/js/bootstrap.min.js"></script>
+<script src="/static/js/modernizr.min.js"></script>
+<script src="/static/js/waves.js"></script>
+<script src="/static/js/jquery.slimscroll.js"></script>
+<script src="/static/js/jquery.nicescroll.js"></script>
+<script src="/static/js/jquery.scrollTo.min.js"></script>
 <!-- KNOB JS -->
-<script src="../static/js/excanvas.js"></script>
-<script src="../static/js/jquery.knob.js"></script>
-<script src="../static/js/mindmup-editabletable.js"></script>
-<script src="../static/js/numeric-input-example.js"></script>
-<script src="../static/js/jquery.tabledit.js"></script>
-<script src="../static/js/table-edit.init.js"></script>
+<script src="/static/js/excanvas.js"></script>
+<script src="/static/js/jquery.knob.js"></script>
+<script src="/static/js/mindmup-editabletable.js"></script>
+<script src="/static/js/numeric-input-example.js"></script>
+<script src="/static/js/jquery.tabledit.js"></script>
+<script src="/static/js/table-edit.init.js"></script>
 <!-- App js -->
 <script src="/static/js/app.js"></script>
 <style type="text/css">
@@ -526,9 +603,18 @@
         padding-left: 50px;
     }
 
-    #username, #password, #email, #name, #tel, #birthday, #checkcode {
+    #name {
         width: 251px;
         height: 32px;
+        border: 1px solid #A6A6A6;
+        /*设置边框圆角*/
+        border-radius: 5px;
+        padding-left: 10px;
+    }
+
+    #password {
+        width: 251px;
+        height: 100px;
         border: 1px solid #A6A6A6;
         /*设置边框圆角*/
         border-radius: 5px;
