主页成绩显示bug修复，用户信息变量调整

--- a/USTD_Dev_all/templates/index.html
+++ b/USTD_Dev_all/templates/index.html
@@ -403,7 +403,7 @@
                                         </div>
                                         <div class="col-10 text-right">
                                             <h5 class="mt-0 mb-1">{{ s5 }}分</h5>
-                                            <p class="mb-0 font-12 text-muted">专业技术能力</p>
+                                            <p class="mb-0 font-12 text-muted">综合发展能力</p>
                                         </div>
                                     </div>
                                 </div>
