--- a/USTD_Dev_all/templates/infor.html
+++ b/USTD_Dev_all/templates/infor.html
@@ -329,7 +329,7 @@
                             </tr>
                             <tr>
                                 <td>专业</td>
-                                <td>{{ sp }}</td>
+                                <td>{{ major }}</td>
                                 <td>
                                     <button type="button" onclick="javascript:location.reload()">刷新</button>
                                 </td>
@@ -354,7 +354,7 @@
 <footer class="footer">
     <div class="container-fluid">
         <div class="row">
-            <div class="col-12">© 2022 大学生发展综合素质测评系统</a></div>
+            <div class="col-12">© 2022 大学生发展综合素质测评系统</div>
         </div>
     </div>
 </footer><!-- End Footer -->
