系统名称修改，bug修复

--- a/USTD_Dev_all/templates/Academic_Early_Warning.html
+++ b/USTD_Dev_all/templates/Academic_Early_Warning.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui">
-    <title>大学生发展综合素质测评系统</title>
+    <title>高校学生综合素质测评及综合分析平台</title>
     <meta content="Admin Dashboard" name="description">
     <meta content="Mannatthemes" name="author">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -33,7 +33,7 @@
                     <i class="mdi mdi-bowling text-success mr-1">
 
                     </i>
-                    <span class="hide-phone">大学生发展综合素质测评系统</span>
+                    <span class="hide-phone">高校学生综合素质测评及综合分析平台</span>
                 </a>
             </div>
             <!-- End Logo container-->
@@ -430,7 +430,7 @@
 <footer class="footer">
     <div class="container-fluid">
         <div class="row">
-            <div class="col-12">© 2022 大学生发展综合素质测评系统</div>
+            <div class="col-12">© 2022 高校学生综合素质测评及综合分析平台</div>
         </div>
     </div>
 </footer><!-- End Footer -->
