--- a/USTD_Dev_all/templates/error2.html
+++ b/USTD_Dev_all/templates/error2.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui">
-    <title>大学生发展综合素质测评系统</title>
+    <title>高校学生综合素质测评及综合分析平台</title>
     <meta content="Admin Dashboard" name="description">
     <meta content="Mannatthemes" name="author">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
