--- a/USTD_Dev_all/templates/index.html
+++ b/USTD_Dev_all/templates/index.html
@@ -165,7 +165,7 @@
                 <!-- Navigation Menu-->
                 <ul class="navigation-menu">
                     <li class="has-submenu">
-                        <a href="http://127.0.0.1:8000/login/index.html">
+                        <a href="http://127.0.0.1:8000/login/?id={{ ID }}">
                             <i class="dripicons-device-desktop">
                             </i>主页
                         </a>
