--- a/USTD_Dev_all/templates/form-editors.html
+++ b/USTD_Dev_all/templates/form-editors.html
@@ -243,19 +243,21 @@
                         </ul>
                     </li>
                     <li class="has-submenu">
-                        <a href="#">
+                       <a href="#">
                             <i class="dripicons-blog">
 
-                            </i> 活动信息
+                            </i>活动信息
                         </a>
-                        <ul class="submenu megamenu">
-                            <li>
-                                <ul>
-                                    <li>
-                                        <a href="activity.html">活动入口</a>
-                                    </li>
-                                </ul>
+                        <ul class="submenu">
+                            <li class="has-submenu">
+                                <a href="activity.html">活动入口</a>
+
                             </li>
+                            <li class="has-submenu">
+                                <a href="application-message.html">个人活动报名信息</a>
+
+                            </li>
+
                         </ul>
                     </li>
                 </ul>
