--- a/USTD_Dev_all/templates/tables-editable.html
+++ b/USTD_Dev_all/templates/tables-editable.html
@@ -236,6 +236,24 @@
                             </li>
                         </ul>
                     </li>
+                    <li class="has-submenu">
+                       <a href="#">
+                            <i class="dripicons-blog">
+
+                            </i>活动信息
+                        </a>
+                        <ul class="submenu">
+                            <li class="has-submenu">
+                                <a href="activity.html">活动入口</a>
+
+                            </li>
+                            <li class="has-submenu">
+                                <a href="application-message.html">个人活动报名信息</a>
+
+                            </li>
+
+                        </ul>
+                    </li>
                 </ul>
                 </li>
 
